--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,14 @@ dependencies:
   share: ^2.0.4
   http: ^0.13.4
   provider: ^6.0.1
+  shared_preferences: ^2.0.8
+  sqflite: ^2.0.0+4
+  intl: ^0.17.0
+  android_alarm_manager: ^2.0.2
+  flutter_local_notifications: ^9.1.3
+  rxdart: ^0.27.2
+  collection: ^1.15.0
+
 
 
 dev_dependencies:
@@ -49,6 +57,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  mockito: ^5.0.16
+  build_runner: ^2.1.5
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
